# VideoTaps

./: CMakeLists.txt  README.md  VideoTap_cases.xlsx  VideoTaps.pptx  conanfile.txt
src/: main.cpp  main_2.cpp  main_copy_uchar.cpp  main_opencv.cpp  raw.py
src/input/: 0_DDR_1X-2Y.raw  0_DDR_4XR_1Y_320_240.raw  1X2_1Y2_DDR_1280_1024.raw
